fixed pill button overflow on tool pages

--- a/_sass/_uswds-theme-utilities.scss
+++ b/_sass/_uswds-theme-utilities.scss
@@ -253,7 +253,7 @@ $flex-wrap-settings: (
 
 $float-settings: (
   output: true,
-  responsive: false,
+  responsive: true,
   active: false,
   focus: false,
   hover: false,
